# github-events-manager

./: .gitignore  .graphqlconfig  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
graphql/: queries.graphql  schema.graphql  schema.json  update_schema.sh
graphql/queries/: issue_timeline_items.graphql  pr_timeline.graphql  pr_timeline_items.graphql  rate_limit.graphql  repositories.graphql  repository.graphql  test.graphql  watch.graphql
migrations/2018-09-01-024559_create_repositories/: down.sql  up.sql
src/: action.rs  db_utils.rs  init.rs  main.rs  model.rs  repository_query.rs  resources.rs  schema.rs  test_query.rs  watch_query.rs
src/action/: add.rs  list.rs  mod.rs  test.rs  utils.rs
src/cmd/: add.rs  fetch.rs  import.rs  list.rs  mod.rs  sync.rs  test.rs  utils.rs
src/graphql/queries/: issue_timeline.graphql  pr_timeline.graphql  query.graphql
src/query/: issue_timeline_items.rs  issues.rs  login_user.rs  mod.rs  pr_timeline_items.rs  pull_request_review.rs  pull_request_timeline_items.rs  pull_requests.rs  rate_limit.rs  repository.rs  test.rs  typedef.rs  watch.rs  watching_repositories.rs
