[package]
name = "ghe"
version = "0.1.0"
authors = ["Hirokazu Hata <h.hata.ai.t@gmail.com>"]
edition = "2018"

[dependencies]
quicli = "0.3.1"
diesel = { version = "1.3.3", features = ["sqlite"] }
diesel_migrations = "1.3.0"
graphql_client = "0.5.1"

serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
reqwest = "0.9.4"

dotenv = "0.13.0"

[features]
default = []
