[package]
name = "ghe"
version = "0.1.0"
authors = ["Hirokazu Hata <h.hata.ai.t@gmail.com>"]
edition = "2018"

[dependencies]
quicli = "0.4.0"
structopt = "0.2.14"
diesel = { version = "1.4.1", features = ["sqlite"] }
diesel_migrations = "1.4.0"
graphql_client = "0.6.1"

serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
reqwest = "0.9.10"

dotenv = "0.13.0"

[features]
default = []
